# quant-research-platform

./: .gitignore  README.md  pyproject.toml
backend/: main.py
backend/api/: backtests.py  data.py  events.py  experiments.py  features.py  schemas.py  universes.py
backend/services/: backtest_service.py  data_service.py  event_service.py  experiment_service.py  feature_service.py  quality_service.py  universe_service.py
configs/: data_sources.yaml
docs/superpowers/plans/: 2026-06-05-dashboard-transformation.md  2026-06-06-mvp2-research-loop.md  2026-06-06-quant-platform-mvp1.md  2026-06-07-mvp3-backtest.md
docs/superpowers/specs/: 2026-06-03-fia-quant-dashboard-design.md  2026-06-06-mvp2-research-loop-design.md  2026-06-06-quant-platform-mvp1-design.md  2026-06-07-mvp3-backtest-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.js  App.tsx  main.js
frontend/src/api/: client.js  client.ts
frontend/src/pages/: Backtests.js  Backtests.tsx  DataCenter.js  DataCenter.tsx  Events.js  (+7 more)
quant_core/: __init__.py
quant_core/backtest/: __init__.py  cost.py  engine.py  event.py  execution.py  metrics.py  portfolio_builder.py  result.py  signal.py
quant_core/data/: __init__.py  adapter.py  akshare_adapter.py  calendar.py  portal.py  quality.py
quant_core/features/: __init__.py  liquidity.py
quant_core/models/: __init__.py  bar.py  symbol.py
quant_core/storage/: __init__.py  experiment_db.py  meta_db.py  parquet_store.py
quant_core/strategy/: __init__.py  universe.py
(+29 files in other folders)
