[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "quant-research-platform"
version = "0.1.0"
description = "A股/港股量化研究平台"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "akshare>=1.10",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "duckdb>=0.10",
    "httpx>=0.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1"]

[tool.setuptools.packages.find]
include = ["quant_core*", "backend*"]

[tool.ruff]
target-version = "py310"
